# Achlys

./: .gitignore  Cargo.toml  README.md  build.rs
achlys/: Cargo.toml
docs/: ARCHITECTURE.md
examples/fuzzers/: cjson_blackbox_fuzzer.rs  cjson_fuzzer.rs  cjson_graybox_fuzzer.rs  simple_fuzzer.rs
src/bridge/: Cargo.toml
src/bridge/src/: compiler.rs  forkexec.rs  inprocess.rs  lib.rs  target.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs  tui.rs
src/core/: Cargo.toml
src/core/src/: ai_mutator.rs  ai_stage.rs  builder.rs  config.rs  cortex_interface.rs  escalation.rs  feedback.rs  lib.rs  plateau.rs
src/cortex/: Cargo.toml
src/cortex/src/: hotswap.rs  lib.rs  model.rs  passthrough.rs  trainer.rs
src/cortex/training/: generate_test_model.py  train.py
