# ===== WORKSPACE ROOT - =====
[workspace]
resolver = "2"
members = [
    "src/core",
    "src/cortex",
    "src/bridge",
    "src/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dadaam"]
license = "MIT"
repository = "https://github.com/Dadaam/achlys"

[workspace.dependencies]
# LibAFL - Fuzzing framework
libafl = "0.15.4"
libafl_bolts = "0.15.4"

# ONNX Runtime - AI/ML inference
ort = "2.0.0-rc.11"

# CLI & Error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance
mimalloc = { version = "0.1", features = [] }

# Build dependencies
cc = "1.2"
