[package]
name = "achlys"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
libafl = { workspace = true }
libafl_bolts = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[[example]]
name = "cjson_fuzzer"
path = "examples/fuzzers/cjson_fuzzer.rs"

[workspace]
members = [
    "src/core",
    "src/cortex",
    "src/bridge",
    "src/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dadaam"]
license = "MIT"
repository = "https://github.com/Dadaam/achlys"


[workspace.dependencies]
# Fuzzing
libafl = "0.15.4"
libafl_bolts = "0.15.4"

# ML
ort = "2.0.0-rc.11"

# Utils
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mimalloc = { version = "0.1", features = [] }

# Build 
cc = "1.2"
